Add family member works

--- a/Templates/regions.html
+++ b/Templates/regions.html
@@ -55,7 +55,7 @@
                     <select name="mother">
                       <option>None</option>
                       {% for member in members %}
-                        <option>{{ member.name }}</option>
+                        <option>{{ member }}</option>
                       {% endfor %}
                     </select>
                     <br><br>
@@ -77,12 +77,12 @@
             <div class="modal-content">
                 <span class="close">&times;</span>
                 <h2 style="font-family : Consolas, monaco, monospace;">The familyName</h2>
-                <form action="/removeMember" method="post">
+                <form onsubmit="return removeMember();">
                     <br>
                     <label class="registerInputTitles">Name:</label>
                     <input type="name" name="treeName" class="registerInputText" placeholder="Name">
                     <br><br>
-                    <button class="Btn" id="removeBtn">Delete Person</button>
+                    <button class="Btn" id="removeBtn">Delete Member</button>
                 </form>
             </div>
         </div>
@@ -91,7 +91,7 @@
         <div id="editModal" class="modal">
             <div class="modal-content">
                 <span class="close">&times;</span>
-                <h2 style="font-family : Consolas, monaco, monospace;">Edit familymember</h2>
+                <h2 style="font-family : Consolas, monaco, monospace;">Edit Family Member</h2>
                 <form action="/editNode" method="post">
                     <br>
                     <label class="registerInputTitles">Name:</label>
@@ -211,6 +211,22 @@
       		treeData = newData;
       		refreshGraph();
       	}
+
+        function getMembers(){
+          event.preventDefault();
+            $.ajax({
+                url: '/getMembers',
+                type: 'POST',
+                success: function(response) {
+                    console.log(response)
+                    d = JSON.parse(response)
+                    {% set members = d %}
+                },
+                error: function(error) {
+                    console.log(error);
+                }
+            });
+        }
 
 /*
  //http://stackoverflow.com/questions/27230293/how-to-convert-svg-to-png-using-html5-canvas-javascript-jquery-and-save-on-serve
