Added edit functionality

--- a/Templates/regions.html
+++ b/Templates/regions.html
@@ -86,27 +86,37 @@
                 </form>
             </div>
         </div>
-
-	<!-- edit modal-->
         <div id="editModal" class="modal">
             <div class="modal-content">
                 <span class="close">&times;</span>
                 <h2 style="font-family : Consolas, monaco, monospace;">Edit Family Member</h2>
-                <form action="/editNode" method="post">
+                <form onsubmit="return editMember();">
                     <br>
-                    <label class="registerInputTitles">Name:</label>
-                    <input type="name" name="treeName" class="registerInputText" placeholder="Name">
-                    <br><br>
-                    <label class="registerInputTitles">Name change:</label>
-                    <input type="name" name="treeName" class="registerInputText" placeholder="Name">
-                    <br><br>
-                    <label class="registerInputTitles">Gender change:</label>
-                    <select>
-                        <option>Male</option>
-                        <option>Female</option>
+                    <label class="registerInputTitles">Select family member:</label>
+                    <select name="editName">
+                      <option>None</option>
+                      {% for member in members %}
+                        <option>{{ member }}</option>
+                      {% endfor %}
                     </select>
                     <br><br>
-                    <button class="Btn" id="editBtn">Edit Person</button>
+                    <label class="registerInputTitles">Mother:</label>
+                    <select name="editMother">
+                      <option>None</option>
+                      {% for member in members %}
+                        <option>{{ member }}</option>
+                      {% endfor %}
+                    </select>
+                    <br><br>
+                    <label class="registerInputTitles">Spouse:</label>
+                    <select name="editSpouse">
+                      <option>None</option>
+                      {% for member in members %}
+                        <option>{{ member }}</option>
+                      {% endfor %}
+                    </select>
+                    <br><br>
+                    <button class="Btn" id="editBtn">Update Member</button>
                 </form>
             </div>
         </div>
@@ -125,6 +135,7 @@
         var addSpan = document.getElementsByClassName("close")[0];
         addBtn.onclick = function() {
             event.preventDefault();
+            modal = document.getElementsByClassName("modal")[0];
             modal.style.display = "block";
         }
         addSpan.onclick = function() {
@@ -138,10 +149,10 @@
 
         // edit modal
         var editBtn = document.getElementById("editBtn");
-        var editSpan = document.getElementsByClassName("close")[0];
+        var editSpan = document.getElementsByClassName("close")[2];
         editBtn.onclick = function() {
             event.preventDefault();
-            modal = document.getElementsByClassName("modal")[0];
+            modal = document.getElementsByClassName("modal")[2];
             modal.style.display = "block";
         }
         editSpan.onclick = function() {
